fixed alignment of survey
needs more elements to look nicer

--- a/lab1/styles/index.css
+++ b/lab1/styles/index.css
@@ -141,6 +141,19 @@ img {
     transform: scale(1.05);
 }
 
+.formBorder {
+    
+  background-color: #f0f0f0;
+  border-radius: 10px; /* Adjust the value to control the roundness of the corners */
+  padding: 20px; /* Add padding as needed */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: left;
+
+}
+
+
+
+
 
 
 
